update readme und vagrant. THREDDS added