@@ -4,6 +4,7 @@ ASSETS_FOLDER="/home/vagrant/assets"
 DATABASE_FOLDER="${ASSETS_FOLDER}/database"
 DEV_FOLDER="/home/vagrant/development"
 WEBAPPS_FOLDER="/var/lib/tomcat8/webapps"
+THREDDS_FOLDER="/var/lib/tomcat8/content"
 
 echo "-------------------- "
 echo "-------------------- updating package lists"
@@ -18,9 +19,11 @@ sudo apt-get install -y php libapache2-mod-php
 sudo service apache2 restart
 
 echo "-------------------- "
-echo "-------------------- installing tomcat"
+echo "-------------------- installing and tweaking tomcat"
 echo "-------------------- "
 sudo apt-get install -y tomcat8
+sudo sed -i "s/JAVA_OPTS=\"-Djava.awt.headless=true -Xmx128m -XX:+UseConcMarkSweepGC\"/JAVA_OPTS=\"-Djava.awt.headless=true -Xms1024m -Xmx1024m -XX:MaxPermSize=512m  -XX:+UseConcMarkSweepGC\"/" /etc/default/tomcat8
+sudo service tomcat8 restart
 
 echo "-------------------- "
 echo "-------------------- installing postgres & postgis"
@@ -100,6 +103,11 @@ echo "-------------------- "
 sudo apt-get install -y openjdk-8-jdk maven
 
 echo "-------------------- "
+echo "-------------------- Stop Tomcat Service"
+echo "-------------------- "
+sudo service tomcat8 stop
+
+echo "-------------------- "
 echo "-------------------- Git include gazetter"
 echo "-------------------- "
 cd ${DEV_FOLDER}/gazetteer
@@ -130,3 +138,28 @@ cd ${DEV_FOLDER}/weatherstations-api/api
 mkdir src/main/resources/
 mvn clean install
 cp target/weatherstations-api.war ${WEBAPPS_FOLDER}
+
+
+echo "-------------------- "
+echo "-------------------- Install Thredds server example"
+echo "-------------------- "
+sudo mkdir ${THREDDS_FOLDER}
+sudo chmod 777 -R ${THREDDS_FOLDER}
+sudo cp ${ASSETS_FOLDER}/thredds/setenv.sh /usr/share/tomcat8/bin
+cp ${ASSETS_FOLDER}/thredds/thredds.war ${WEBAPPS_FOLDER}
+
+echo "-------------------- "
+echo "-------------------- Create Thredds content example"
+echo "-------------------- "
+
+sudo mkdir /var/lib/tomcat8/content/data
+sudo chmod 777 -R /var/lib/tomcat8/content/data/
+cp -R ${ASSETS_FOLDER}/thredds/GHCN_CAMS ${THREDDS_FOLDER}/data
+cp ${ASSETS_FOLDER}/thredds/catalog.xml ${THREDDS_FOLDER}/thredds
+cp ${ASSETS_FOLDER}/thredds/threddsConfig.xml ${THREDDS_FOLDER}/thredds
+sudo chmod 777 -R /var/lib/tomcat8/content/
+
+echo "-------------------- "
+echo "-------------------- Start Tomcat Service"
+echo "-------------------- "
+sudo service tomcat8 start
